--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <input type="text" id="display" disabled>
         <div class="buttons-container">
             <div class="buttons">
-                <button onclick="clearDisplay()">AC</button>
+                <button onclick="appendToDisplay('.')">.</button>
                 <button onclick="appendToDisplay('7')">7</button>
                 <button onclick="appendToDisplay('8')">8</button>
                 <button onclick="appendToDisplay('9')">9</button>
@@ -26,7 +26,8 @@
                 <button onclick="appendToDisplay('-')">-</button>
                 <button onclick="appendToDisplay('+')">+</button>
                 <button onclick="appendToDisplay('0')">0</button>
-                <button onclick="calculate()">=</button>
+                <button id="rezultats" onclick="calculate()">=</button>
+                <button id="AC" onclick="clearDisplay()">AC</button>
             </div>
         </div>
         <div class="history">
